# solana-prediction-market-indexer

./: .env.example  .eslintrc.cjs  .gitignore  Anchor.toml  README.md  docker-compose.yml  index.html  package.json  robots.txt  sitemap.xml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: architecture.md
programs/prediction-market/: Cargo.toml
programs/prediction-market/src/: lib.rs
programs/prediction-market/tests/: prediction-market.ts
scripts/: migrate.mjs  seed-mock.ts
