[package]
name = "prediction-market"
version = "0.1.0"
description = "Binary-outcome prediction market with a constant-product AMM, oracle resolution, and proportional payouts."
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
